@@ -30,12 +30,12 @@ MannKendall <- function(mydata,
                         date.breaks = 7,...)  {
 
 
-    #greyscale handling
+    ## greyscale handling
     if (length(cols) == 1 && cols == "greyscale") {
-        #strip
+        ## strip
         current.strip <- trellis.par.get("strip.background")
         trellis.par.set(list(strip.background = list(col = "white")))
-        #other local colours
+        ## other local colours
         line.col <- "black"
         data.col <- "darkgrey"
         text.col <- "black"
@@ -69,6 +69,8 @@ MannKendall <- function(mydata,
                     percentile = percentile, data.thresh = data.thresh)      
 
     process.cond <- function(mydata) {
+
+        if (all(is.na(mydata[ , pollutant]))) return()
 
         ## sometimes data have long trailing NAs, so start and end at
         ## first and last data
@@ -121,7 +123,7 @@ MannKendall <- function(mydata,
         }
 
         ## now calculate trend, uncertainties etc ###############################################
-
+        if (nrow(results) < 2) return()
         MKresults <- MKstats(results$date, results$conc, alpha, simulate, autocor)
         
         ## make sure missing data are put back in for plotting
@@ -130,11 +132,12 @@ MannKendall <- function(mydata,
     }
 
     split.data <- ddply(mydata, type,  process.cond)
+    if (nrow(split.data) < 2) return()
     
     skip <- FALSE
     layout <- NULL
 
-   
+    
     
     if (length(type) == 1 & type[1] == "wd") {
         ## re-order to make sensible layout
@@ -144,14 +147,14 @@ MannKendall <- function(mydata,
         ## see if wd is actually there or not
         wd.ok <- sapply(wds, function (x) {if (x %in% unique(split.data$wd)) FALSE else TRUE })
         skip <- c(wd.ok[1:4], TRUE, wd.ok[5:8])
-           
+        
         split.data$wd <- factor(split.data$wd)  ## remove empty factor levels
-    
+        
         layout = if (type == "wd") c(3, 3) else NULL
     }
 
-       ## proper names of labelling ##############################################################################
-    pol.name <- sapply(levels(split.data[ , type[1]]), function(x) quickText(x, auto.text))
+    ## proper names of labelling ##############################################################################
+    pol.name <- sapply(levels(factor(split.data[ , type[1]])), function(x) quickText(x, auto.text))
     strip <- strip.custom(factor.levels = pol.name)
 
     if (length(type) == 1 ) {
@@ -160,12 +163,12 @@ MannKendall <- function(mydata,
         
     } else { ## two conditioning variables        
         
-        pol.name <- sapply(levels(split.data[ , type[2]]), function(x) quickText(x, auto.text))
+        pol.name <- sapply(levels(factor(split.data[ , type[2]])), function(x) quickText(x, auto.text))
         strip.left <- strip.custom(factor.levels = pol.name)       
     }
     if (length(type) == 1 & type[1] == "default") strip <- FALSE ## remove strip
 ########################################################################################################
- 
+    
     
 
 #### calculate slopes etc ###############################################################################
@@ -186,12 +189,12 @@ MannKendall <- function(mydata,
     start <- ddply(split.data, type, function (x) head(x, 1))
     end <- ddply(split.data, type, function (x) tail(x, 1))
     percent.change <- merge(start, end, by = type, suffixes = c(".start", ".end"))
-   
+    
     percent.change <- transform(percent.change, slope.percent = 100 * 365 *
                                 ((slope.start * as.numeric(date.end) / 365 + intercept.start) /
                                  (slope.start * as.numeric(date.start) / 365 + intercept.start) - 1) /
                                 (as.numeric(date.end) - as.numeric(date.start)))
-   
+    
     percent.change <- transform(percent.change, lower.percent = slope.percent / slope.start * lower.start,
                                 upper.percent = slope.percent / slope.start * upper.start)
 
@@ -205,7 +208,7 @@ MannKendall <- function(mydata,
 
     temp <- paste(type, collapse = "+")
     myform <- formula(paste("conc ~ date| ", temp, sep = ""))
-  
+    
     plt <- xyplot(myform, data = split.data,
                   ylab = quickText(ylab, auto.text),
                   main = quickText(main, auto.text),
@@ -229,44 +232,48 @@ MannKendall <- function(mydata,
 
                       sub.dat <- na.omit(split.data[subscripts, ])
 
-                      panel.abline(a = sub.dat[1, "intercept"], b = sub.dat[1, "slope"] / 365,
-                                   col = line.col, lwd = 2)
-                      panel.abline(a = sub.dat[1, "intercept.lower"], b = sub.dat[1, "upper"] / 365, lty = 5,
-                                   col = line.col)
-                      panel.abline(a = sub.dat[1, "intercept.upper"], b = sub.dat[1, "lower"] / 365, lty = 5,
-                                   col = line.col)
+                      if (nrow(sub.dat) > 0) {
+                          panel.abline(a = sub.dat[1, "intercept"], b = sub.dat[1, "slope"] / 365,
+                                       col = line.col, lwd = 2)
+                          panel.abline(a = sub.dat[1, "intercept.lower"], b = sub.dat[1, "upper"] / 365,
+                                       lty = 5,
+                                       col = line.col)
+                          panel.abline(a = sub.dat[1, "intercept.upper"], b = sub.dat[1, "lower"] / 365,
+                                       lty = 5,
+                                       col = line.col)
 
-                      ## for text on plot - % trend or not?
-                      slope <- "slope"
-                      lower <- "lower"
-                      upper <- "upper"
-                      units <- "units"
-                      
-                      if (slope.percent) {
-                          slope <- "slope.percent"
-                          lower <- "lower.percent"
-                          upper <- "upper.percent"
-                          units <- "%"
+                          ## for text on plot - % trend or not?
+                          slope <- "slope"
+                          lower <- "lower"
+                          upper <- "upper"
+                          units <- "units"
+                          
+                          if (slope.percent) {
+                              slope <- "slope.percent"
+                              lower <- "lower.percent"
+                              upper <- "upper.percent"
+                              units <- "%"
+                          }
+                          
+                          panel.text(min(split.data$date), 0.95 * current.panel.limits()$ylim[2],
+                                     paste(round(sub.dat[1, slope], dec.place), " ", "[",
+                                           round(sub.dat[1, lower], dec.place), ", ",
+                                           round(sub.dat[1, upper], dec.place), "] ",
+                                           units, "/", xlab, " ", sub.dat[1, "p.stars"], sep = ""),
+                                     cex = 0.7, pos = 4, col = text.col)
                       }
-                      
-                      panel.text(min(split.data$date), 0.95 * current.panel.limits()$ylim[2],
-                                 paste(round(sub.dat[1, slope], dec.place), " ", "[",
-                                       round(sub.dat[1, lower], dec.place), ", ",
-                                       round(sub.dat[1, upper], dec.place), "] ",
-                                       units, "/", xlab, " ", sub.dat[1, "p.stars"], sep = ""),
-                                 cex = 0.7, pos = 4, col = text.col)                     
                   }
                   )
     
 #################
-                                        #output
+    ## output
 #################
     if (length(type) == 1) plot(plt) else plot(useOuterStrips(plt, strip = strip, strip.left = strip.left))
     newdata <- list(main.data = split.data, res2 = res2, subsets = c("main.data", "res2"))
     output <- list(plot = plt, data = newdata, call = match.call())
     class(output) <- "openair"
 
-    #reset if greyscale
+    ## reset if greyscale
     if (length(cols) == 1 && cols == "greyscale") 
         trellis.par.set("strip.background", current.strip)
 
